<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:baselineAligned="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="16dp"
                android:paddingTop="16dp" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/dependency_manager"
                    android:textAppearance="?android:attr/textAppearanceListItem" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@android:id/summary"
                    style="@style/PreferenceSummaryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@android:id/title"
                    android:layout_alignStart="@android:id/title"
                    android:layout_below="@android:id/title"
                    android:layout_gravity="start"
                    android:maxLines="10"
                    android:text="@string/dependency_manager_desc"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorSecondary" />
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dep_name"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/til_dependency_hint" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/skip_dependency_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
			android:visibility="visible"
            android:text="@string/skip_sub_dependencies"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/download" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:padding="8dp" />
    </LinearLayout>

</LinearLayout>